pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxCannotSpreadListIntoMapping.pkl
l: List = List(1, 2, 3, 4)

m: Mapping = new {
  ...l
}
